HelloUltraviolet/Fixtures/RejectedSource/Expressions/PtrNullExpectedRequirement/Source/Main.uv
//! Rejected Ptr::null specimen for incompatible expected type.

public procedure ptrNullExpectedRequirementReference() -> i32 {
    let value: i32 = Ptr::null()
    return value
}
